# racing

./: .aicoe-ci.yaml  .gitignore  .pre-commit-config.yaml  .prow.yaml  .sops.yaml  .thoth.yaml  OWNERS  Pipfile  README.md  _config.yml  _toc.yml  client_pub_opts.py  sample-small.json  sample.json
components/paddock/: .containerignore  .env.example  .gitignore  CHANGELOG.md  Containerfile  Pipfile  README.md  e2e-test.sh  manage.py  pyproject.toml  pytest.ini  readonly_user.sql
components/paddock/accounts/: apps.py  forms.py  signals.py
components/paddock/accounts/migrations/: 0001_initial.py  0002_delete_racinguser.py
components/paddock/api/: telemetry_loader.py  urls.py  views.py
components/paddock/api/templates/: session.html
components/paddock/b4mad_racing_website/: admin.py  apps.py  fastlap_app.py  forms.py  models.py  pitcrew_app.py  signals.py  urls.py  views.py
components/paddock/b4mad_racing_website/fixtures/: copilot.json  copilotinstance.json  filter.sh  profile.json  user.json
components/paddock/b4mad_racing_website/migrations/: 0001_initial.py  0002_alter_profile_options_and_more.py  0003_copilotinstance.py  0004_profile_driver_alter_copilotinstance_copilot.py  0005_copilot_long_description.py  0006_copilot_slug.py
components/paddock/b4mad_racing_website/templatetags/: racing_tags.py
components/paddock/b4mad_racing_website/tests/: copilot_enable_tests.py  copilots_view_tests.py  factories.py  profile_view_tests.py  signup_tests.py  subscriptions_tests.py
components/paddock/frontpage/: apps.py  tests.py  urls.py  views.py
components/paddock/k6.d/: README.md  average-load.js  browser.js  e2e.js  smoke.js
components/paddock/kpi/: views.py
components/paddock/notebooks/: django_initializer.py  fast_laps.ipynb  fast_laps_rbr.ipynb  gpt_prompt.md  gpt_prompt_session_analyzer.md  hello.py  interpolate.ipynb  lap.ipynb  plot_track.ipynb  segments.ipynb  session_valid.html  session_valid.md  visualize_lap.ipynb
components/paddock/paddock/: __init__.py  asgi.py  exceptions.py  fastlap_app.py  metrics.py  metrics_exporter.py  pitcrew_app.py  settings.py  urls.py  views.py  wsgi.py
components/paddock/paddock/assets/: session.css  session.js
components/paddock/paddock/templates/: base.html  coach.html  fastlap.html  fastlap_dash.html  fastlap_index.html  home.html  pitcrew.html  pitcrew_index.html  session.html  sessions.html  social_account_login.html
components/paddock/racing-website/: .containerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Containerfile  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt  scratch.txt
components/paddock/racing-website/.tekton/: on-push-to-main.yaml
components/paddock/racing-website/b4mad_racing/: asgi.py  settings.py  urls.py  wsgi.py
components/paddock/racing-website/fixtures/: copilots.json  games.json  profiles.json  users.json
components/paddock/scripts/: dumpdata.sh  e2e-test.sh  pytest.sh  rebuild.sh
components/paddock/stewards/: apps.py  urls.py  views.py
components/paddock/telemetry/: admin.py  analyzer.py  factories.py  fast_lap_analyzer.py  fast_lap_analyzer_v1.py  fast_lap_analyzer_v2.py  fast_lap_analyzer_v3.py  influx.py  metrics.py  models.py  racing_stats.py  tasks.py  tests.py  utils.py  visualizer.py
components/paddock/telemetry/fixtures/: car.json  coach.json  driver.json  fastlap.json  fastlapsegment.json  filter.sh  game.json  landmark.json  lap.json  session.json  sessiontype.json  track.json  trackguide.json  trackguidenote.json
components/paddock/telemetry/migrations/: 0001_initial.py  0002_auto_20221128_1323.py  0002_auto_20221201_1729.py  0003_auto_20221128_1328.py  0004_lap_end.py  (+27 more)
components/paddock/templates/: 404.html
components/paddock/track_guides/: Automobilista 2--BMW M4 GT4--Monza:Monza_2020.csv  iRacing--BMW M4 GT4--monza full.csv  iRacing--Mazda MX-5 Cup--okayama short.csv
(+632 files in other folders)
