[project]
authors = [
  {name = "Marcel Hild", email = "durandom@b4mad.net"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
description = "This is the #B4mad Racing Paddock."
name = "b4mad-racing-paddock"
requires-python = ">=3.10"
version = "0.4.8-dev"

[project.urls]
"Bug Tracker" = "https://github.com/b4mad/racing/issues"
"Homepage" = "https://b4mad.racing"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

# https://github.com/pypa/setuptools/issues/3197#issuecomment-1078770109
[tool.setuptools]
py-modules = []

[project.optional-dependencies]
dev = [
  "black",
  "django-stubs",
  "factory-boy",
  "mypy",
  "pip-tools",
]
